# saritasa-drf-tools

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  compose.yaml  mkdocs.yml  pyproject.toml  tasks.py  versions.json
.github/: settings.yaml
.github/workflows/: checks.yaml  publish.yml  run_pre_commit.yaml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/contributing/: index.html
0.4.0/reference/filters/django_filters/: index.html
0.4.0/reference/filters/ordering/: index.html
0.4.0/reference/filters/search/: index.html
0.4.0/reference/open_api/extend_schema/: index.html
0.4.0/reference/open_api/serializers/: index.html
0.4.0/reference/pagination/: index.html
0.4.0/reference/pytest_plugin/: index.html
0.4.0/reference/renderers/: index.html
0.4.0/reference/serializers/base/: index.html
0.4.0/reference/serializers/mixins/clean_validation_mixin/: index.html
0.4.0/reference/serializers/mixins/field_mapping_override_mixin/: index.html
0.4.0/reference/serializers/mixins/nested_fields_mixin/: index.html
0.4.0/reference/serializers/mixins/user_and_request_from_request_mixin/: index.html
0.4.0/reference/serializers/model_base/: index.html
0.4.0/reference/testing/api_action_tester/: index.html
0.4.0/reference/testing/drf_standardized_errors/: index.html
0.4.0/reference/views/base/: index.html
0.4.0/reference/views/crud/: index.html
0.4.0/reference/views/mixins/permissions_map_mixin/: index.html
0.4.0/reference/views/mixins/serializers_map_mixin/: index.html
0.4.0/reference/views/mixins/update_without_patch_mixin/: index.html
0.4.0/reference/views/read_only/: index.html
docs/reference/: pagination.md  pytest_plugin.md  renderers.md
docs/reference/filters/: django_filters.md  ordering.md  search.md
docs/reference/open_api/: extend_schema.md  serializers.md
docs/reference/serializers/: base.md  model_base.md
docs/reference/serializers/mixins/: clean_validation_mixin.md  field_mapping_override_mixin.md  nested_fields_mixin.md  user_and_request_from_request_mixin.md
docs/reference/testing/: api_action_tester.md  drf_standardized_errors.md
docs/reference/views/: base.md  crud.md  read_only.md
docs/reference/views/mixins/: permissions_map_mixin.md  serializers_map_mixin.md  update_without_patch_mixin.md
example/: settings.py  urls.py
example/app/: factories.py  models.py
example/app/api/: __init__.py  fields.py  filters.py  scheme.py  serializers.py  views.py
example/app/migrations/: 0001_initial.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/contributing/: index.html
latest/reference/filters/django_filters/: index.html
latest/reference/filters/ordering/: index.html
latest/reference/filters/search/: index.html
latest/reference/open_api/extend_schema/: index.html
latest/reference/open_api/serializers/: index.html
latest/reference/pagination/: index.html
latest/reference/pytest_plugin/: index.html
latest/reference/renderers/: index.html
latest/reference/serializers/base/: index.html
latest/reference/serializers/mixins/clean_validation_mixin/: index.html
latest/reference/serializers/mixins/field_mapping_override_mixin/: index.html
latest/reference/serializers/mixins/nested_fields_mixin/: index.html
latest/reference/serializers/mixins/user_and_request_from_request_mixin/: index.html
latest/reference/serializers/model_base/: index.html
latest/reference/testing/api_action_tester/: index.html
latest/reference/testing/drf_standardized_errors/: index.html
latest/reference/views/base/: index.html
latest/reference/views/crud/: index.html
latest/reference/views/mixins/permissions_map_mixin/: index.html
latest/reference/views/mixins/serializers_map_mixin/: index.html
latest/reference/views/mixins/update_without_patch_mixin/: index.html
latest/reference/views/read_only/: index.html
latest/search/: search_index.json
saritasa_drf_tools/: django_filters.py  pagination.py  pytest_plugin.py  renderers.py
saritasa_drf_tools/filters/: __init__.py  ordering.py  search.py
saritasa_drf_tools/open_api/: __init__.py  extend_schema.py  serializers.py
saritasa_drf_tools/serializers/: __init__.py  base.py  model_base.py
saritasa_drf_tools/serializers/mixins/: __init__.py  clean_validation_mixin.py  data_fields.py  field_mapping_override_mixin.py  nested_fields_mixin.py  user_and_request_from_request_mixin.py
saritasa_drf_tools/testing/: __init__.py  api_action_tester.py  drf_standardized_errors.py
saritasa_drf_tools/views/: __init__.py  base.py  crud.py  read_only.py
saritasa_drf_tools/views/mixins/: __init__.py  permissions_map_mixin.py  serializers_map_mixin.py  update_without_patch_mixin.py
tests/: conftest.py  test_open_api.py  test_serializer_data_fields.py  test_serializer_nested_fields.py  test_serializer_override_mapping.py
tests/test_crud_api/: test_html_renderer.py  test_ordering.py  test_pagination.py  test_permission_map.py  test_serializer_clean.py  test_transaction_capture_on_commit.py  tester.py
